<resources>
    <string name="app_name">KiteApp</string>
    <!--<string name="app_name">KiteApp</string>-->
    <string name="intro_fragment_get_started">Get Started</string>
    <string name="tap_to_type">Tap to type</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Minimum 6 characters required</string>
    <string name="done_button">Done</string>
    <string name="enter_email">What\'s your email?</string>
    <string name="Next">Next</string>
    <string name="EnterPassword">Enter your Password</string>
    <string name="pleasewait">Please Wait...</string>
    <string name="Internet_Connection_Required">Internet Connection Required</string>
    <string name="Email_is_not_correct">Email is not correct</string>
    <string name="Enteryouremail">Enter your email!</string>
    <string name="Enteryourpassword">Enter the Password!</string>
    <string name="forgetpassword">Forgot?</string>

    <string name="title_location_permission">Alert</string>
    <string name="text_location_permission">Location Permission</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="access_token">pk.eyJ1Ijoia3Jpc2huYXJhdmkxNyIsImEiOiJjazFxMGhpdHIwNGRnM2RvMXFpcGp6c2dqIn0.YY1OdfMojdWiF8OhLBiByQ</string>
    <string name="user_location_permission_not_granted">User location permission not granted!!</string>


    <string name="nav_header_title">Magma</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="Press_Back_again_to_Exit">Press Back again to Exit!</string>
    <string name="some_error_occured">Some error occured!!</string>
    <string name="ChangeyourEmail">Change your Email</string>
    <string name="Enter_your_Username">Enter your Username</string>
    <string name="Enter_your_full_name">Enter your full name</string>
    <string name="changeYourPassword">Change your Password</string>
    <string name="done">Done</string>
    <string name="enteryourusername">Enter your Username</string>
    <string name="enteryourfullname">Enter your Fullname!!</string>
    <string name="enteryoutnewemail">Enter your New Email</string>
    <string name="enteryoutnewpassword">Enter Your New Password</string>
    <string name="passwordNotMatch">Password Not Match!!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Confirm_your_password">Confirm your password</string>
    <string name="changeYourName">Change your name</string>
    <string name="changeyourusername">Change your Username</string>
    <string name="Addmap">Add Map</string>
    <string name="enteryournewusername">Enter your new username</string>
    <string name="WhatstheMapname">Whats the Map name</string>
    <string name="Find">Find</string>
    <string name="EnterMapName">Enter Map Name!</string>
    <string name="Mappurpose">Map Purpose</string>
    <string name="Describethepurposeofthismap">Describe the purpose of this map</string>
    <string name="SKIP">SKIP</string>
    <string name="selectMapPrivacy">Select Map Privacy</string>
    <string name="Private">Private</string>
    <string name="Privatestring"><![CDATA[Best forbusiness operations & private groups. User must be invited to join this map.]]></string>
    <string name="Public">Public</string>
    <string name="Publicstring"><![CDATA[Best for information discovery & public groups. Anyone can discover this map and join.]]></string>
    <string name="WelcomwToKite">Welcome To Kite</string>
    <string name="EnterUsername">Enter your Username</string>
    <string name="signup">Sign Up</string>
    <string name="termsandprivacypolicy">Terms &amp; Private Policy</string>
    <string name="termsdescription">By Tapping done you are aggreeing to the above</string>
    <string name="unread">UNREAD</string>
    <string name="read">READ</string>
    <string name="more">MORE</string>
    <string name="text_wave_title_hint">Write a title...</string>
    <string name="post">POST</string>
    <string name="addMoreDetails">Add More Details</string>
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="GPSAlertDialogTitle">GPS Alert</string>
    <string name="GPSAlertDialogMessage">Do you want to Enable GPS?</string>
    <string name="fillthedetails">Fill the Details!</string>
</resources>
