<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectMapPrivacy"
        android:textColor="@color/colorBlack"
        android:textSize="22dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical"
        android:id="@+id/ll_private"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp20"
            android:textColor="@color/colorSecondaryLightBlue"
            android:text="@string/Private"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp18"
            android:textColor="@color/colorBlack"
            android:text="@string/Privatestring"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical"
        android:id="@+id/ll_public"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp20"
            android:textColor="@color/colorSecondaryLightBlue"
            android:text="@string/Public"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp18"
            android:textColor="@color/colorBlack"
            android:text="@string/Publicstring"/>


    </LinearLayout>

</LinearLayout>
