<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpPassFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp250"
                android:background="@color/colorSecondaryLightBlue"
                android:padding="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView

                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:padding="@dimen/dp10"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/headerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp20"
                    android:text="@string/WelcomwToKite"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dp25"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rl_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp190"
                android:padding="@dimen/dp20"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp34"
                    android:layout_marginTop="@dimen/dp52"
                    android:background="@color/colorSecondaryLightBlue"
                    android:text="@string/done_button"
                    android:textColor="@color/colorBackgroundWhite"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="11dp"
                    android:src="@drawable/ic_security"
                    android:tint="@color/waver_text"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:spinnerMode="dialog"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/validation_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/invalid_password"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_onboarding_tap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp32"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/tap_to_type"
                    android:textColor="@color/hintColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                <TextView
                    android:id="@+id/tv_termsAndCondtions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp12"
                    android:layout_marginTop="@dimen/dp52"
                    android:text="@string/termsandprivacypolicy"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dp15"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                <TextView
                    android:id="@+id/termsDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp12"
                    android:layout_marginTop="@dimen/dp70"
                    android:text="@string/termsdescription"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/dp10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="@dimen/dp8"
                    android:hint="@string/EnterPassword"
                    android:textColor="@color/waver_text"
                    android:textColorHint="@color/hintColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_signup_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/waver_text"
                        android:textColorHint="@color/hintColor" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp1"
                        android:background="@color/waver_text" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>