<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChangeUserDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp250"
                android:background="@color/colorSecondaryLightBlue"
                android:padding="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView

                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_headerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/ChangeyourEmail"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/dp25"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout><!--header-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp190"
                android:padding="@dimen/dp20"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/header">

                <Button
                    android:id="@+id/btn_forget_pass"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp34"
                    android:layout_marginStart="@dimen/dp32"
                    android:layout_marginTop="@dimen/dp52"
                    android:background="#00000000"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/waver_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

                <Button
                    android:id="@+id/btn_login_password"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="@dimen/dp34"
                    android:layout_marginTop="@dimen/dp52"
                    android:layout_marginEnd="@dimen/dp8"
                    android:background="@color/colorSecondaryLightBlue"
                    android:text="@string/done_button"
                    android:textColor="@color/colorBackgroundWhite"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="11dp"
                    android:src="@drawable/ic_security_white_24dp"
                    android:tint="@color/waver_text"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/tv_onboarding_tapPass"
                    android:layout_width="@dimen/dp100"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp32"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/tap_to_type"
                    android:textColor="@color/hintColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

                <!--Later On in Module-2-->

                <TextView
                    android:id="@+id/tv_validation_errorpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp32"
                    android:text="@string/invalid_password"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/EnterPassword"
                    android:textColor="@color/waver_text"
                    android:textColorHint="@color/hintColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp50"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/waver_text"
                        android:textColorHint="@color/hintColor" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp1"
                        android:background="@color/waver_text" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout><!--confirm Password-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_userDetails"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">


                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="100dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="52dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorSecondaryLightBlue"
                    android:enabled="false"
                    android:text="@string/done_button"
                    android:textColor="@color/colorBackgroundWhite"

                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


                <ImageView
                    android:id="@+id/iv_userdetails"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_email"
                    android:tint="@color/waver_text"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ProgressBar
                    android:id="@+id/pb_onboarding_progressbar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_onboarding_tap"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tap_to_type"
                    android:textColor="@color/hintColor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <!--Later On in Module-2-->

                <TextView
                    android:id="@+id/tv_validation_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/invalid_email"
                    android:textColor="@color/colorRed"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/enter_email"
                    android:textColor="@color/waver_text"
                    android:textColorHint="@color/hintColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:textColor="@color/waver_text"
                        android:textColorHint="@color/hintColor" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:background="@color/waver_text" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout><!--login userDetails-->

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

